# robit-single

./: makeall_debug.sh  makeall_release.sh
gige_cap/: package.xml
gige_cap/doc/: manifest.yaml
gige_cap/doc/html/: annotated.html  classes.html  dir_000000_000001.html  dir_0deade5599cfdbace8d6cec3ac032367.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  gige__capture_8cpp.html  gige__capture_8cpp__incl.md5  gige__capture_8cpp_source.html  gige__common_8h.html  gige__common_8h__dep__incl.map  gige__common_8h__dep__incl.md5  gige__common_8h__incl.md5  gige__common_8h_source.html  gige__config_8h.html  gige__config_8h__dep__incl.map  gige__config_8h__dep__incl.md5  gige__config_8h__incl.map  gige__config_8h__incl.md5  gige__config_8h_source.html  gige__connect_8cpp.html  gige__connect_8cpp__incl.md5  gige__connect_8cpp_source.html  gige__main_8cpp.html  gige__main_8cpp__incl.md5  gige__main_8cpp_source.html  gige__setparam_8cpp.html  gige__setparam_8cpp__incl.map  gige__setparam_8cpp__incl.md5  gige__setparam_8cpp_source.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  group__retryover__group.html  index-msg.html  (+15 more)
gige_cap/doc/html/srv/: SetParam.html
gige_cap/include/gige_cap/: gige_config.h
gige_cap/launch/: gige_view.launch
gige_cap/src/: gige_common.h  gige_connect.cpp  gige_main.cpp  gige_setparam.cpp
image_processor/: CMakeLists.txt  package.xml
image_processor/launch/: image_processor.launch
image_processor/src/: Thresholder.cpp  Thresholder.h  Thresholder_Main.cpp  image_process_main.cpp  main.cpp  msg_transport.cpp  msg_transport.h
movectrl/: CMakeLists.txt  TODO  package.xml
movectrl/include/movectrl/: movectrl_const.h
movectrl/launch/: circle_test.launch
movectrl/msg/: ControlerState.msg  MoveCmd.msg  SelfPos.msg
movectrl/src/: controller.cpp  movectrl_common.h  movectrl_main.cpp
movectrl/srv/: GetState.srv  SetSpeed.srv
movectrl/test/: movectrl_circle_test.cpp
robit_core/: CMakeLists.txt  package.xml
robit_core/launch/: catch_ball.launch  shoot_test.launch
robit_core/src/: catch_ball_main.cpp  shoot_test.cpp
serial/: CMakeLists.txt  package.xml
serial/msg/: feedback.msg  shootcmd.msg  speedcmd.msg
serial/src/: serialport.cpp  serialtest.cpp
serial/srv/: sp.srv
